--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,9 @@
 body {
-    text-align: center;
-    vertical-align: middle;
-    margin: 0 auto;
+  margin: 0 auto;
+  max-width: 100%;
+  width: 1400px;
+  text-align: center;
+  vertical-align: middle;
 }
 
 body * {
